--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@
 -e git+https://github.com/jupyter/jupyter_client.git#egg=jupyter_client
 -e git+https://github.com/ipython/ipython.git#egg=ipython
 -e git+https://github.com/ipython/ipython_kernel.git#egg=ipython_kernel
+-e git+https://github.com/jupyter/jupyter_notebook.git#egg=jupyter_notebook
