--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,7 @@ docs/source/api/generated
 docs/source/config/options
 docs/source/interactive/magics-generated.txt
 docs/gh-pages
-jupyter_notebook/notebook/static/mathjax
-jupyter_notebook/static/style/*.map
+nbconvert/resources/style.min.css
 *.py[co]
 __pycache__
 *.egg-info
