--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+bleach==1.4.1
 -e git+https://github.com/ipython/traitlets.git#egg=traitlets
 -e git+https://github.com/jupyter/jupyter_core.git#egg=jupyter_core
 -e git+https://github.com/jupyter/nbformat.git#egg=nbformat
