pdflatex part of texlive

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
     - 2.7
 sudo: true
 before_install:
-    - sudo apt-get install pdflatex texlive-base pandoc
+    - sudo apt-get install texlive-base pandoc
     - git clone --quiet --depth 1 https://github.com/minrk/travis-wheels travis-wheels
 install:
     # temporary while renaming propagates
