Move nbconvert arg to the beginning.

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
 script:
     - # need to cd or coverage report broken.
     - cd /tmp/
-    - nosetests --with-coverage --cover-package nbconvert --cover-inclusive --cover-xml nbconvert --cover-xml-file=$TRAVIS_BUILD_DIR/coverage.xml
+    - nosetests nbconvert --with-coverage --cover-package nbconvert --cover-inclusive --cover-xml --cover-xml-file=$TRAVIS_BUILD_DIR/coverage.xml
     - cd -
 after_success:
     - codecov
