--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,5 +2,6 @@ traitlets
 jupyter_core
 jupyter_client
 nbformat
+nbsphinx
 sphinx_rtd_theme
 -e git+https://github.com/ipython/ipykernel.git#egg=ipykernel
