add entrypoints to environment.yml
remove unused ipykernel, numpydoc

--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,5 +1,5 @@
 conda:
     file: docs/environment.yml
 python:
-    version: 2   # https://github.com/rtfd/readthedocs.org/issues/1901
+    version: 2 # pandoc fails with Python 3 (missing libgmp??)
     setup_py_install: true
