--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,5 +1,4 @@
 conda:
-    file: docs/environment.yml
+    file: docs/conda_env.yml
 python:
-    version: 2 # pandoc fails with Python 3 (missing libgmp??)
-    setup_py_install: true
+    version: 3
