--- a/docs/conda_env.yml
+++ b/docs/conda_env.yml
@@ -1,10 +1,6 @@
 name: nbconvert_docs
 dependencies:
-- nbconvert
-- nbformat
-- jupyter
-- notebook
-- jupyter_client
-- sphinx
-- nbsphinx
-- entrypoints
+- sphinx>=1.3
+- sphinx_rtd_theme
+- pip:
+    - nbsphinx
