--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,5 +1,5 @@
 conda:
     file: docs/environment.yml
 python:
-    version: 2
-    setup_py_install: true 
+    version: 3.5
+    setup_py_install: false
