--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ addons:
   apt:
     packages:
     - texlive-latex-recommended
-    - texlive-xetex
+    - texlive-xetex # both for pdf output tests
+    - inkscape # for svgs in pdf output
 before_install:
     - git clone --quiet --depth 1 https://github.com/minrk/travis-wheels travis-wheels
 install:
