--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ addons:
   apt:
     packages:
     - texlive-latex-extra # we need this for all the latex package we use, recommended is not enough
+    - texlive-fonts-recommended # fonts...
     - texlive-xetex # latex to pdf converter
     - inkscape # for svgs in pdf output
 before_install:
