Install more fonts on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ addons:
     packages:
     - texlive-latex-extra # we need this for all the latex package we use, recommended is not enough
     - texlive-fonts-recommended # fonts...
+    - cm-super # more fonts
     - texlive-xetex # latex to pdf converter
     - inkscape # for svgs in pdf output
 before_install:
