--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+sudo: required
+dist: trusty
+
 language: python
 python:
     - 3.5
@@ -7,7 +10,6 @@ python:
 env:
   global:
     - PATH=$TRAVIS_BUILD_DIR/bin:$PATH
-sudo: false
 addons:
   apt:
     packages:
