--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,8 @@ addons:
   apt:
     packages:
     - texlive-latex-extra # we need this for all the latex package we use, recommended is not enough
-    - latex-xcolor # ... and we even need another latex package
+    - texlive-generic-recommended # .. and more ...
+    - latex-xcolor # ... and more latex packages
     - texlive-fonts-recommended # fonts...
     - cm-super # more fonts
     - texlive-xetex # latex to pdf converter
