Comment travis switch to a newer ubuntu

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+# Use a newer travis environment:
+# https://docs.travis-ci.com/user/trusty-ci-environment/
+# needs these two lines:
 sudo: required
 dist: trusty
 
