--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ addons:
     - texlive-xetex # latex to pdf converter
     - inkscape # for svgs in pdf output
     - texlive-lang-cjk # for cjk language support
+    - texlive-lang-chinese # chinese language support for now
 before_install:
     - git clone --quiet --depth 1 https://github.com/minrk/travis-wheels travis-wheels
 install:
