--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -7,7 +7,7 @@ dependencies:
 - nbformat
 - jupyter_client
 - ipython
-- sphinx>=1.3.6
+- sphinx>=1.3.6,!=1.5.0,!=1.5.1
 - sphinx_rtd_theme
 - tornado
 - entrypoints
