--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,8 @@ addons:
 before_install:
     - git clone --quiet --depth 1 https://github.com/minrk/travis-wheels travis-wheels
 install:
-    - wget http://c90cb902a90d6a506ab3-a24171cbeaa42ce11788f0df3362e902.r46.cf5.rackcdn.com/pandoc-1.15.0.6.tar.gz && tar -xzf pandoc-1.15.0.6.tar.gz
+    # - wget https://hackage.haskell.org/package/pandoc-1.19.1/pandoc-1.19.1.tar.gz && tar -xzvf pandoc-1.19.1.tar.gz
+    - wget http://c90cb902a90d6a506ab3-a24171cbeaa42ce11788f0df3362e902.r46.cf5.rackcdn.com/pandoc-1.15.0.6.tar.gz && tar -xzvf pandoc-1.15.0.6.tar.gz 
     - pip install -f travis-wheels/wheelhouse . codecov coverage
     - pip install nbconvert[execute,serve,test]
     - python -m ipykernel.kernelspec --user
