See if travis can find sourcecodepro

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ addons:
     - texlive-generic-recommended # .. and more ...
     - latex-xcolor # ... and more latex packages
     - texlive-fonts-recommended # fonts...
+    - texlive-fonts-extra # fonts incl. sourcecodepro..
     - lmodern
     - cm-super # more fonts
     - texlive-xetex # latex to pdf converter
