--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,10 +1,16 @@
 include LICENSE
 include CONTRIBUTING.md
 include README.md
+include .mailmap
+include MANIFEST.in
+include nbconvert/templates/skeleton/Makefile
+include nbconvert/tests/README.md
 
 # Documentation
 graft docs
 exclude docs/\#*
+exclude readthedocs.yml
+exclude codecov.yml
 
 # Examples
 graft examples
