Attempt to fix test matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,17 +3,19 @@
 # needs these two lines:
 sudo: required
 dist: trusty
+language: python
 
 language: python
 matrix:
-  include:
-    - python: 2.7
-    - python: 3.5
-    - python: 3.6
-    - python: 3.7
-      dist: xenial    # required for Python 3.7 (travis-ci/travis-ci#9069)
-      sudo: required  # required for Python 3.7 (travis-ci/travis-ci#9069)
-    - python: nightly
+    include:
+        - python: 2.7
+        - python: 3.5
+        - python: 3.6
+        - python: 3.7
+          dist: xenial    # required for Python 3.7 (travis-ci/travis-ci#9069)
+        - python: nightly
+    allow_failures:
+        - python: nightly
 env:
   global:
     - PATH=$TRAVIS_BUILD_DIR/bin:$PATH
@@ -41,6 +43,3 @@ script:
     - py.test --cov nbconvert -v --pyargs nbconvert
 after_success:
     - codecov
-matrix:
-    allow_failures:
-        - python: "nightly"
