--- a/setup.cfg
+++ b/setup.cfg
@@ -6,4 +6,6 @@ license_file = LICENSE
 
 [check-manifest]
 ignore =
-    nbconvert/resources/style.min.css
+    nbconvert/resources/index.css
+    nbconvert/resources/theme-light.css
+    nbconvert/resources/theme-dark.css
