Applied PR feedback

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,11 @@ htmlcov
 .cache
 docs/source/*.tpl
 docs/source/config_options.rst
+
 # Eclipse pollutes the filesystem
 .project
 .pydevproject
 .settings
+
+# VSCode
+.vscode
