Simplified the test execution

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,11 +36,7 @@ install:
     - python -m ipykernel.kernelspec --user
 script:
     - check-manifest
-    # cd so we test the install, not the repo
-    - cd `mktemp -d`
-    # Needed for pytest configurations to load correctly when in a different directory structure
-    - mv $TRAVIS_BUILD_DIR/nbconvert/conftest.py ./
     # Only run coverage over fast tests, as the slow tests go substantially slower with that turned on
-    - py.test --slow-only -v --pyargs nbconvert && py.test --skip-slow --cov nbconvert -v --pyargs nbconvert
+    - py.test --slow-only -v && py.test --skip-slow --cov nbconvert -v
 after_success:
     - codecov
