--- a/.travis.yml
+++ b/.travis.yml
@@ -33,10 +33,12 @@ install:
     - pip install -f travis-wheels/wheelhouse . codecov coverage
     - pip install nbconvert[execute,serve,test]
     - pip install check-manifest
+    - pip install -U git+https://github.com/jupyter/jupyter_client.git@master
     - python -m ipykernel.kernelspec --user
 script:
     - check-manifest
-    # Only run coverage over fast tests, as the slow tests go substantially slower with that turned on
-    - py.test --slow-only -v nbconvert && py.test --skip-slow --cov nbconvert -v nbconvert
+    # cd so we test the install, not the repo
+    - cd `mktemp -d`
+    - py.test --cov nbconvert -v --pyargs nbconvert
 after_success:
     - codecov
