--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ install:
     - pip install check-manifest
     - python -m ipykernel.kernelspec --user
 script:
-    - check-manifest
+    - check-manifest --ignore "share/**"
     # cd so we test the install, not the repo
     - cd `mktemp -d`
     - py.test --cov nbconvert -v --pyargs nbconvert
