--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ addons:
     - texlive-xetex # latex to pdf converter
     - inkscape # for svgs in pdf output
     - lmodern # latex package
+    - texlive-generic-extra
 install:
     - wget https://github.com/jgm/pandoc/releases/download/2.7/pandoc-2.7-1-amd64.deb && sudo dpkg -i pandoc-2.7-1-amd64.deb
     - pip install --upgrade setuptools pip pytest
