--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ matrix:
         - python: 3.5
         - python: 3.6
         - python: 3.7
-        - python: nightly
+        - python: 3.8
     allow_failures:
         - python: nightly
 env:
