Ignore downloaded CSS

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,9 @@ docs/source/config_options.rst
 *.code-workspace
 .history
 .vscode
+
+# Downloaded theme files
+share/jupyter/nbconvert/templates/lab/static/index.css
+share/jupyter/nbconvert/templates/lab/static/theme-dark.css
+share/jupyter/nbconvert/templates/lab/static/theme-light.css
+
