Applied patch for marking network changes
Co-authored-by: Matěj Cepl <mcepl@suse.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,3 +8,7 @@ license_file = LICENSE
 ignore =
     nbconvert/resources/style.min.css
     .circleci/*
+
+[tool:pytest]
+markers =
+    network: marks tests which require network connection
