--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,10 @@ addons:
     - inkscape # for svgs in pdf output
     - lmodern # latex package
     - texlive-generic-extra
+before_install:
+    # jupyter-client 6.2.0 has been yanked from pypi so install it manually
+    - wget -O - https://github.com/jupyter/jupyter_client/archive/refs/tags/6.2.0.tar.gz | tar -xz
+    - pip install --ignore-installed jupyter_client-6.2.0/.
 install:
     - wget https://github.com/jgm/pandoc/releases/download/2.7/pandoc-2.7-1-amd64.deb && sudo dpkg -i pandoc-2.7-1-amd64.deb
     - pip install --upgrade setuptools pip pytest
