--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,13 +9,12 @@ on:
 jobs:
   generate-docs:
     runs-on: ubuntu-latest
+    container:
+      image: danteev/texlive:latest
     defaults:
       run:
         shell: bash -l {0}
     steps:
-      - uses: docker://pandoc/latex
-        with:
-          args: "--help" # gets appended to pandoc command
       - uses: actions/checkout@v2
       - name: Install Python
         uses: actions/setup-python@v2
