Switch back to pandoc/latex image

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,14 +9,13 @@ on:
 jobs:
   generate-docs:
     runs-on: ubuntu-latest
+    container: 
+      image: pandoc/latex
     defaults:
       run:
         shell: bash -l {0}
     steps:
-      - uses: docker://pandoc/latex
-        with:
-          args: "--help" # gets appended to pandoc command
-      - run: apk update && apk add texlive
+      - run: /sbin/apk update && /sbin/apk add texlive
       - uses: actions/checkout@v2
       - name: Install Python
         uses: actions/setup-python@v2
