Update docs action to be consistent with the other actions

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,24 +9,33 @@ on:
 jobs:
   generate-docs:
     runs-on: ubuntu-latest
-    container: 
-      image: pandoc/latex
+    strategy:
+      matrix:
+        python-version: [ '3.7', '3.8', '3.9' ]
     steps:
-      - run: /sbin/apk update && /sbin/apk add texlive
-      - uses: actions/checkout@v2
-      - name: Install Python
+      - name: Check out repository code
+        uses: actions/checkout@v2
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install texlive-latex-recommended inkscape texlive-xetex latexmk
+
+          # pandoc is not up to date in the ubuntu repos, so we install directly
+          wget https://github.com/jgm/pandoc/releases/download/2.14.2/pandoc-2.14.2-1-amd64.deb && sudo dpkg -i pandoc-2.14.2-1-amd64.deb
+
+      - name: Install Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x'
+          python-version: ${{ matrix.python-version }}
           architecture: 'x64'
       - name: Cache pip on Linux
         uses: actions/cache@v2
         if: startsWith(runner.os, 'Linux')
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ matrix.python }}-${{ hashFiles('setup.py') }}
+          key: ${{ runner.os }}-pip-${{ matrix.python-version }}-${{ hashFiles('setup.py') }}
           restore-keys: |
-            ${{ runner.os }}-pip-${{ matrix.python }}
+            ${{ runner.os }}-pip-${{ matrix.python-version }}
       - run: latexmk -h
       - name: Install
         run: pip install -v ".[all]"
@@ -39,4 +48,3 @@ jobs:
           make latexpdf
       - name: Check links
         run: python setup.py build_sphinx -b linkcheck
-
