--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -38,16 +38,25 @@ jobs:
             ${{ runner.os }}-pip-${{ matrix.python-version }}
       - name: Install
         run: pip install -v ".[all]"
+      - name: List installed packages
+        run: |
+          pip freeze
+          pip check
       - name: Build HTML docs
-        run: python setup.py build_sphinx -b html
+        env:
+          PYTHONWARNINGS: default
+        run: |
+          python setup.py build_sphinx -b html
       - name: Upload HTML
         uses: actions/upload-artifact@v2
         with:
           name: html
           path: build/sphinx/html
       - name: Build PDF docs
+        env:
+          PYTHONWARNINGS: default
         run: |
-          python setup.py build_sphinx -b latex
+          python -Wd setup.py build_sphinx -b latex
           cd docs
           make latexpdf
       - name: Upload PDF
