--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,14 +8,24 @@ on:
 
 jobs:
   run-tests:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: ['ubuntu-latest', 'macos-latest', 'windows-latest']
         python-version: [ '3.7', '3.8', '3.9', '3.10', 'pypy-3.7']
+        exclude:
+          - os: "windows-latest"
+            python-version: ["pypy-3.7", "3.8"]
+          - os: "macos-latest"
+            python-version: ["3.10", "pypy-3.7"]
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
-      - name: Install dependencies
+      - name: Run base setup actions
+        uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
+
+      - name: Install Linux dependencies
+        if: startsWith(runner.os, 'Linux')
         run: |
           sudo apt-get update
           sudo apt-get install texlive-plain-generic inkscape texlive-xetex
@@ -23,24 +33,9 @@ jobs:
           # pandoc is not up to date in the ubuntu repos, so we install directly
           wget https://github.com/jgm/pandoc/releases/download/2.14.2/pandoc-2.14.2-1-amd64.deb && sudo dpkg -i pandoc-2.14.2-1-amd64.deb
 
-      - name: Install Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-          architecture: 'x64'
-      - name: Cache pip on Linux
-        uses: actions/cache@v2
-        if: startsWith(runner.os, 'Linux')
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ matrix.python-version }}-${{ hashFiles('setup.py') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-${{ matrix.python-version }}
-
       - name: Install package dependencies
         run: |
-          pip install --upgrade setuptools pip pytest
-          pip install -f travis-wheels/wheelhouse . codecov coverage
+          pip install codecov
           pip install nbconvert[execute,serve,test]
           pip install check-manifest
           python -m ipykernel.kernelspec --user
@@ -51,7 +46,7 @@ jobs:
           pip check
 
       - name: Run tests with coverage
-        if: ${{ !startsWith(matrix.python-version, 'pypy') }}
+        if: ${{ !startsWith(matrix.python-version, 'pypy') && !startsWith(runner.os, 'Windows')  }}
         env:
           PYTHONWARNINGS: default
         run: |
@@ -60,8 +55,8 @@ jobs:
           cd `mktemp -d`
           pytest --cov nbconvert -v --pyargs nbconvert
 
-      - name: Run tests on pypy
-        if: startsWith(matrix.python-version, 'pypy')
+      - name: Run tests on pypy and Windows
+        if: ${{ startsWith(matrix.python-version, 'pypy') || startsWith(runner.os, 'Windows')  }}
         run: |
           # cd so we test the install, not the repo
           cd `mktemp -d`
