fix windows test

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -52,7 +52,7 @@ jobs:
         run: |
           check-manifest --ignore "share/**"
           # cd so we test the install, not the repo
-          cd `mktemp -d`
+          cd $HOME
           pytest --cov nbconvert -v --pyargs nbconvert
 
       - name: Run tests on pypy and Windows
@@ -60,7 +60,7 @@ jobs:
         shell: bash
         run: |
           # cd so we test the install, not the repo
-          cd `mktemp -d`
+          cd $HOME
           pytest -v --pyargs nbconvert
 
       - name: Code coverage
