--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,7 +15,7 @@ jobs:
         python-version: [ '3.7', '3.8', '3.9', '3.10', 'pypy-3.7']
         exclude:
           - os: "windows-latest"
-            python-version: ["3.7", "3.9"]
+            python-version: ["3.7", "pypy-3.7"]
           - os: "macos-latest"
             python-version: ["3.8", "3.10"]
     steps:
