--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,6 +38,8 @@ jobs:
           pip install codecov
           pip install -e ".[execute,serve,test]"
           pip install check-manifest
+          # See https://github.com/pyppeteer/pyppeteer/pull/321
+          pip install -U websockets
           python -m ipykernel.kernelspec --user
 
       - name: List installed packages
