--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -52,7 +52,7 @@ jobs:
         run: |
           check-manifest --ignore "share/**"
           # See https://github.com/pyppeteer/pyppeteer/pull/321
-          pip install --force-install -U websockets
+          pip install -U websockets
           # cd so we test the install, not the repo
           cd $HOME
           pytest --cov nbconvert -v --pyargs nbconvert
@@ -64,7 +64,7 @@ jobs:
           # cd so we test the install, not the repo
           cd $HOME
           # See https://github.com/pyppeteer/pyppeteer/pull/321
-          pip install --force-install -U websockets
+          pip install -U websockets
           pytest -v --pyargs nbconvert
 
       - name: Code coverage
