--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -11,6 +11,8 @@ graft docs
 exclude docs/\#*
 exclude .readthedocs.yml
 exclude codecov.yml
+exclude .pre-commit-config.yaml
+exclude .git-blame-ignore-revs
 
 # Examples
 graft examples
