--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,6 +6,7 @@ include MANIFEST.in
 include nbconvert/templates/skeleton/Makefile
 include nbconvert/tests/README.md
 include pyproject.toml
+include setup.py
 
 # Documentation
 graft docs
